--- a/presentation.html
+++ b/presentation.html
@@ -66,14 +66,14 @@
         <h3>L'énergie et les objets connectés</h3>
 
         <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (selon
-            l'institut GFK, on estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et alimenter tout ces objets connectés va devenir de plus en plus problématique. En effet, ces objets utilisent des batteries au lithium qui
+            l'institut GFK, on estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et alimenter tous ces objets connectés va devenir de plus en plus problématique. En effet, ces objets utilisent des batteries au lithium qui
             posent un certain nombre de problèmes comme vous pourrez le voir par la suite. Il faut donc trouver des moyens de créer de l'énergie propre en continu, afin de ne plus avoir à les charger et donc pouvoir se passer de batteries. L'objectif
             de ce TPE est de donner des éléments de réponse à ce problème.</p>
         <hr/>
         <h3>Le problème du Lithium</h3>
 
-        <p class="prestext">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, son extraction est très polluante du fait de l'utilisation d'eau qui une fois utilisée va contaminer
-            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluant la nature, et dangereux pour la faune et la flore.
+        <p class="prestext">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, son extraction est très polluante du fait de l'utilisation d'eau qui une fois consommée va contaminer
+            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voire pas du tout) recyclables, ce qui en fait des déchets toxiques supplémentaires polluant la nature, et dangereux pour la faune et la flore.
             Enfin le lithium est un élément alcalin très réactif. Par conséquent les batteries au lithium sont inflammables et peuvent exploser si elles sont mal utilisées, ce qui peut les rendre dangereuses (ex: le Boeing 787 et ses batteries au lithium).
             Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en envisageant 3 solutions possibles au problème.</p>
 
@@ -87,9 +87,9 @@
             <br/><sub>Source : <a target="_blank" href="http://www.luxol.fr/projet-toiture-solaire/14-effet-photovoltaique.html">http://www.luxol.fr/</a></sub></p>
         <img class="presimg" src="photovolt.png" />
         <h4> Exemple d'application :</h4>
-        <p class="prestext">C'est une solution classique et connue de tous mais qui reste très efficace avec de nombreuses applications. Il est donc tout naturel de commencer par cette solution. Comme application, nous pourrions imaginer un tout petit panneau solaire permettant
-            de récupérer suffisamment d'énergie pour alimenter un objet connecté de temps à autre. Une autre solution serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage d'un objet connecté autonome est que,
-            la plupart du temps, il ne demande pas beaucoup d'énergie. L'objet pourrait même se situer en intérieur du moment qu'il reçoit assez de lumière.</p>
+        <p class="prestext">C'est une solution classique et connue de tous mais qui reste très efficace avec de nombreuses applications. Il est donc tout naturel de commencer par là. Comme application, nous pourrions imaginer un tout petit panneau solaire permettant de récupérer
+            suffisamment d'énergie pour alimenter un objet connecté de temps à autre. Une autre solution serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage d'un objet connecté autonome est que, la plupart du
+            temps, il ne demande pas beaucoup d'énergie. L'objet pourrait même se situer en intérieur du moment qu'il reçoit assez de lumière.</p>
 
 
         <hr/>
