--- a/conclu.html
+++ b/conclu.html
@@ -57,7 +57,7 @@
         <h2>Conclusion</h2>
         <p>Finalement, nous pouvons dire que des solutions au problème du lithium existent. Cependant, les solutions que nous avons expérimentées sont trop situationelles (effet photovoltaïque et effet seebeck), ou alors trop peu efficaces (effet piezoélectrique)
             pour être considérées comme de vraies solutions. Nous en avons tout de même une qui tient plutôt bien la route : l'effet photovoltaïque. En effet, celle-ci est moins situationelle et est suffisamment efficace pour alimenter régulièrement un
-            objet connecté au moins de manière ponctuelle avec des condensateurs. Ce n'est d'ailleurs pas surprenant car il existe déjà quelques objets connectés utilisant un petit panneau solaire. Il n'en reste pas moins que le problème du lithium et
+            objet connecté, au moins de manière ponctuelle avec des condensateurs. Ce n'est d'ailleurs pas surprenant car il existe déjà quelques objets connectés utilisant un petit panneau solaire. Il n'en reste pas moins que le problème du lithium et
             des objets connectés est un défi écologique et énergétique crucial à relever. Il continuera de gagner en importance avec les années si on ne trouve pas de solutions permettant de se passer de batteries.</p>
         <br/>
         <br/>
